ADD: ZETextureFileJPEG implemented. CHG: Because of it's code length ZETextureFileJPEG is divided into sub files: ZETextureFileJPEGIDCTProcessor, ZETextureFileJPEGDequantizator, ZETextureFileJPEGChromaUpsampler, ZETextureFileJPEGColorSpaceConverter, ZETextureFileJPEGHuffmanDecoder, ZETextureFileJPEGMCUController and ZETextureFileJPEGMainController and ZETextureFileJPEGMarkerReader.cpp.
svn path=/trunk/; revision=909

--- a/Source/ZEEngine/ZETexture/CMakeLists.txt
+++ b/Source/ZEEngine/ZETexture/CMakeLists.txt
@@ -35,47 +35,107 @@
 
 cmake_minimum_required(VERSION 2.8)
 
-ze_add_source(ZEBitmap.cpp						Sources)
-ze_add_source(ZEBitmap.h						Sources Headers)
-ze_add_source(ZETextureResource.cpp				Sources)
-ze_add_source(ZETextureResource.h				Sources Headers)
-ze_add_source(ZETexture2DResource.cpp			Sources)
-ze_add_source(ZETexture2DResource.h				Sources Headers)
-ze_add_source(ZETexture3DResource.cpp			Sources)
-ze_add_source(ZETexture3DResource.h				Sources Headers)
-ze_add_source(ZETextureCubeResource.cpp			Sources)
-ze_add_source(ZETextureCubeResource.h			Sources Headers)
-ze_add_source(ZETextureCacheDataIdentifier.cpp	Sources)
-ze_add_source(ZETextureCacheDataIdentifier.h	Sources Headers)
-ze_add_source(ZETextureData.cpp					Sources)
-ze_add_source(ZETextureData.h				    Sources Headers)
-ze_add_source(ZETextureFile.cpp			  		Sources)
-ze_add_source(ZETextureFile.h				    Sources Headers)
-ze_add_source(ZETextureFileBMP.cpp				Sources)
-ze_add_source(ZETextureFileBMP.h			  	Sources Headers)
-ze_add_source(ZETextureFileBMPTest.cpp			Tests)
-ze_add_source(ZETextureFileFormat.cpp			Sources)
-ze_add_source(ZETexturePixelConverter.h			Sources Headers)
-ze_add_source(ZETexturePixelConverter.cpp		Sources)
-ze_add_source(ZETextureFileFormat.h				Sources Headers)
-ze_add_source(ZETextureFileJPEG.cpp				Sources)
-ze_add_source(ZETextureFileJPEG.h			  	Sources Headers)
-ze_add_source(ZETextureFileTGA.cpp				Sources)
-ze_add_source(ZETextureFileTGA.h			  	Sources Headers)
-ze_add_source(ZETextureFileTGATest.cpp			Tests)
-ze_add_source(ZETextureFileTIFF.cpp				Sources)
-ze_add_source(ZETextureFileTIFF.h			  	Sources Headers)
-ze_add_source(ZETextureFileTIFFTest.cpp			Tests)
-ze_add_source(ZETextureLoader.cpp			  	Sources)
-ze_add_source(ZETextureLoader.h					Sources Headers)
-ze_add_source(ZETextureOptions.cpp				Sources)
-ze_add_source(ZETextureOptions.h				Sources Headers)
-ze_add_source(ZETextureQualityManager.cpp		Sources)
-ze_add_source(ZETextureQualityManager.h			Sources Headers)
-ze_add_source(ZETextureTools.cpp				Sources)
-ze_add_source(ZETextureTools.h					Sources Headers)
-ze_add_source(ZEDecompressorLZW.cpp				Sources)
-ze_add_source(ZEDecompressorLZW.h				Sources Headers)
+ze_add_source(ZEBitmap.cpp								Sources)
+ze_add_source(ZEBitmap.h								Sources Headers)
+ze_add_source(ZETexture2DResource.cpp					Sources)
+ze_add_source(ZETexture2DResource.h						Sources Headers)
+ze_add_source(ZETexture3DResource.cpp					Sources)
+ze_add_source(ZETexture3DResource.h						Sources Headers)
+ze_add_source(ZETextureResource.cpp						Sources)
+ze_add_source(ZETextureResource.h						Sources Headers)
+ze_add_source(ZETextureCacheDataIdentifier.cpp			Sources)
+ze_add_source(ZETextureCacheDataIdentifier.h			Sources Headers)
+ze_add_source(ZETextureCubeResource.cpp					Sources)
+ze_add_source(ZETextureCubeResource.h					Sources Headers)
+ze_add_source(ZETextureData.cpp							Sources)
+ze_add_source(ZETextureData.h				    		Sources Headers)
+ze_add_source(ZETextureFile.cpp			  				Sources)
+ze_add_source(ZETextureFile.h				    		Sources Headers)
+ze_add_source(ZETextureFileBMP.cpp						Sources)
+ze_add_source(ZETextureFileBMP.h			  			Sources Headers)
+ze_add_source(ZETextureFileBMPTest.cpp					Tests)
+ze_add_source(ZETextureFileFormat.cpp					Sources)
+ze_add_source(ZETextureFileFormat.h						Sources Headers)
+ze_add_source(ZETextureFileJPEG.cpp						Sources)
+ze_add_source(ZETextureFileJPEG.h						Sources Headers)
+ze_add_source(ZETextureFileJPEGChromaUpsampler.cpp		Sources)
+ze_add_source(ZETextureFileJPEGChromaUpsampler.h		Sources)
+ze_add_source(ZETextureFileJPEGColorSpaceConverter.cpp	Sources)
+ze_add_source(ZETextureFileJPEGColorSpaceConverter.h	Sources)
+ze_add_source(ZETextureFileJPEGCommonDefinitions.cpp	Sources)
+ze_add_source(ZETextureFileJPEGCommonDefinitions.h		Sources)
+ze_add_source(ZETextureFileJPEGDequantizator.cpp		Sources)
+ze_add_source(ZETextureFileJPEGDequantizator.h			Sources)
+ze_add_source(ZETextureFileJPEGHuffmanDecoder.cpp		Sources)
+ze_add_source(ZETextureFileJPEGHuffmanDecoder.h			Sources)
+ze_add_source(ZETextureFileJPEGIDCTProcessor.cpp		Sources)
+ze_add_source(ZETextureFileJPEGIDCTProcessor.h			Sources)
+ze_add_source(ZETextureFileJPEGMainController.cpp		Sources)
+ze_add_source(ZETextureFileJPEGMainController.h			Sources)
+ze_add_source(ZETextureFileJPEGMarkerReader.cpp			Sources)
+ze_add_source(ZETextureFileJPEGMarkerReader.h			Sources)
+ze_add_source(ZETextureFileJPEGMCUController.cpp		Sources)
+ze_add_source(ZETextureFileJPEGMCUController.h			Sources)
+ze_add_source(ZETextureFileTGA.cpp						Sources)
+ze_add_source(ZETextureFileTGA.h						Sources Headers)
+#ze_add_source(ZETextureFileTGATest.cpp					Tests)
+ze_add_source(ZETextureFileTIFF.cpp						Sources)
+ze_add_source(ZETextureFileTIFF.h			  			Sources Headers)
+ze_add_source(ZETextureLoader.cpp						Sources)
+ze_add_source(ZETextureLoader.h							Sources Headers)
+ze_add_source(ZETextureOptions.cpp						Sources)
+ze_add_source(ZETextureOptions.h						Sources Headers)
+ze_add_source(ZETexturePixelConverter.cpp				Sources)
+ze_add_source(ZETexturePixelConverter.h					Sources Headers)
+ze_add_source(ZETextureQualityManager.cpp				Sources)
+ze_add_source(ZETextureQualityManager.h					Sources Headers)
+ze_add_source(ZETextureResource.cpp						Sources)
+ze_add_source(ZETextureResource.h						Sources Headers)
+ze_add_source(ZETextureTools.cpp						Sources)
+ze_add_source(ZETextureTools.h							Sources Headers)
+ze_add_source(ZEBitmap.cpp								Sources)
+ze_add_source(ZEBitmap.h								Sources Headers)
+ze_add_source(ZETextureResource.cpp						Sources)
+ze_add_source(ZETextureResource.h						Sources Headers)
+ze_add_source(ZETexture2DResource.cpp					Sources)
+ze_add_source(ZETexture2DResource.h						Sources Headers)
+ze_add_source(ZETexture3DResource.cpp					Sources)
+ze_add_source(ZETexture3DResource.h						Sources Headers)
+ze_add_source(ZETextureCubeResource.cpp					Sources)
+ze_add_source(ZETextureCubeResource.h					Sources Headers)
+ze_add_source(ZETextureCacheDataIdentifier.cpp			Sources)
+ze_add_source(ZETextureCacheDataIdentifier.h			Sources Headers)
+ze_add_source(ZETextureData.cpp							Sources)
+ze_add_source(ZETextureData.h				    		Sources Headers)
+ze_add_source(ZETextureFile.cpp			  				Sources)
+ze_add_source(ZETextureFile.h				    		Sources Headers)
+ze_add_source(ZETextureFileBMP.cpp						Sources)
+ze_add_source(ZETextureFileBMP.h			  			Sources Headers)
+ze_add_source(ZETextureFileBMPTest.cpp					Tests)
+ze_add_source(ZETextureFileFormat.cpp					Sources)
+ze_add_source(ZETexturePixelConverter.h					Sources Headers)
+ze_add_source(ZETexturePixelConverter.cpp				Sources)
+ze_add_source(ZETextureFileFormat.h						Sources Headers)
+ze_add_source(ZETextureFileJPEG.cpp						Sources)
+ze_add_source(ZETextureFileJPEG.h			  			Sources Headers)
+ze_add_source(ZETextureFileTGA.cpp						Sources)
+ze_add_source(ZETextureFileTGA.h			  			Sources Headers)
+ze_add_source(ZETextureFileTGATest.cpp					Tests)
+ze_add_source(ZETextureFileTIFF.cpp						Sources)
+ze_add_source(ZETextureFileTIFF.h			  			Sources Headers)
+ze_add_source(ZETextureFileTIFFTest.cpp					Tests)
+ze_add_source(ZETextureLoader.cpp			  			Sources)
+ze_add_source(ZETextureLoader.h							Sources Headers)
+ze_add_source(ZETextureOptions.cpp						Sources)
+ze_add_source(ZETextureOptions.h						Sources Headers)
+ze_add_source(ZETextureQualityManager.cpp				Sources)
+ze_add_source(ZETextureQualityManager.h					Sources Headers)
+ze_add_source(ZETextureTools.cpp						Sources)
+ze_add_source(ZETextureTools.h							Sources Headers)
+ze_add_source(ZEDecompressorLZW.cpp						Sources)
+ze_add_source(ZEDecompressorLZW.h						Sources Headers)
+
+
 
 
 ze_add_library(ZETexture 
