ADD: ZEList has been implemented. ADD: ZEArrayIterator and ZEListIterator. FIX: CMake function PLATFORMS parameter has been fixed. ze_platform_check CMake macro has been fixed. FIX: Minor bug fixes in ZEModules/CMakeLists.txt.
svn path=/trunk/; revision=910

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -36,7 +36,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 ze_add_module(ZEEngine)
-ze_add_module(ZEModules			OPTIONAL DEFAULT 	PLATFORMS Windows)
+ze_add_module(ZEModules			OPTIONAL DEFAULT)
 ze_add_module(ZEditor			OPTIONAL DEFAULT)
 ze_add_module(ZE3dsMax			OPTIONAL DEFAULT 	PLATFORMS Windows)
 ze_add_module(ZEFoundation)
