--- a/Source/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEDS/CMakeLists.txt
@@ -39,6 +39,8 @@ ze_add_source(ZEAllocator.cpp			Sources)
 ze_add_source(ZEAllocator.h				Sources Headers)
 ze_add_source(ZEArray.cpp				Sources)
 ze_add_source(ZEArray.h					Sources Headers)
+ze_add_source(ZEArrayIterators.cpp		Sources)
+ze_add_source(ZEArrayIterators.h		Sources Headers)
 ze_add_source(ZEArrayTests.cpp			Tests)
 ze_add_source(ZEDelegate.cpp			Sources)
 ze_add_source(ZEDelegate.h				Sources Headers)
@@ -57,12 +59,14 @@ ze_add_source(ZEMinHeapTests.cpp		Tests)
 ze_add_source(ZEMaxHeap.h				Sources Headers)
 ze_add_source(ZEMaxHeap.cpp				Sources)
 ze_add_source(ZEMaxHeapTests.cpp		Tests)
-ze_add_source(ZEList.h					Sources Headers)
 ze_add_source(ZEList.cpp				Sources)
+ze_add_source(ZEList.h					Sources Headers)
+ze_add_source(ZEListIterators.cpp		Sources)
+ze_add_source(ZEListIterators.h			Sources Headers)
+ze_add_source(ZETree.cpp				Sources)
 ze_add_source(ZETree.h					Sources Headers)
-ze_add_source(ZETree.cpp				Sources Headers)
+ze_add_source(ZEGraph.cpp				Sources)
 ze_add_source(ZEGraph.h					Sources Headers)
-ze_add_source(ZEGraph.cpp				Sources Headers)
 ze_add_source(ZEPointer.cpp				Sources)
 ze_add_source(ZEPointer.h				Sources Headers)
 ze_add_source(ZEPointerTests.cpp		Tests)
