FIX: Build fixed by adding ws2_32 lib to ZESocket CMakeLists.txt FIX: Necessary headers are included into ZESocketTests_Windows.cpp
svn path=/trunk/; revision=917

--- a/Source/ZEFoundation/ZESocket/CMakeLists.txt
+++ b/Source/ZEFoundation/ZESocket/CMakeLists.txt
@@ -51,7 +51,7 @@ ze_add_source(ZESocket.h					Sources Headers)
 ze_add_library(ZESocket 
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
-	LIBS libzlib ZEFoundation
+	LIBS ws2_32 ZEFoundation
 	INSTALL
 	INSTALL_DESTINATION ZEFoundation/ZESocket
 	INSTALL_COMPONENT ZESDK)
