ADD: ZELog has been added. REM: Logging Functionalities from ZEError has been removed. CHG: ZEErrorManagement has been updated according to new ZELog and ZEError system. REN: ZEAssert has been renamed to ZEDebugCheck. REN: ZEAssertWarning has been renamed to ZEDebugCheckWarning. ADD: ZEDLL header has been added. It includes ZE_DLL_METHOD macro which is used for exporting and importing dynamic link signatures. ADD: Initial commit of Job framework added ZEThread. CHG: ZELockHandle system has been removed from ZELock. REN: append_property cmake command has been moved to ze_functions.cmake and renamed to ze_append_property.
svn path=/trunk/; revision=918

--- a/CMake/CMakeLists.txt
+++ b/CMake/CMakeLists.txt
@@ -36,8 +36,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 ze_add_cmake_project(CMakeScripts
-	SOURCES append_property.cmake
-		build_dir_check.cmake
+	SOURCES	build_dir_check.cmake
 		CMakeLists.txt
 		cppcheck.cmake
 		parse_arguments.cmake
