--- a/Source/ZEEngine/CMakeLists.txt
+++ b/Source/ZEEngine/CMakeLists.txt
@@ -41,7 +41,7 @@ ze_set_project_folder("ZEEngine")
 
 set (CMAKE_CXX_SOURCE_FILE_EXTENSIONS ${CMAKE_CXX_SOURCE_FILE_EXTENSIONS} zpp)
 
-append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS 
+ze_append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS 
 	ZE_ZINEK_ENGINE)
 
 add_subdirectory(ZEAI)
