--- a/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
@@ -35,12 +35,12 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG
+ze_append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG
 	ZE_DEBUG_D3D9_DEBUG_SHADERS	ZE_DEBUG_D3D9_ENABLE_PERFHUD)
 
 set(ZEBUILD_D3D9_ENABLE_PERFHUD	                FALSE CACHE BOOL "Enable PerfHud device in release mode.")
 if(ZEBUILD_D3D9_ENABLE_PERFHUD)
-	append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_RELEASE ZE_DEBUG_D3D9_ENABLE_PERFHUD)
+	ze_append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_RELEASE ZE_DEBUG_D3D9_ENABLE_PERFHUD)
 endif()
 
 
