--- a/Source/ZEFoundation/ZESocket/CMakeLists.txt
+++ b/Source/ZEFoundation/ZESocket/CMakeLists.txt
@@ -51,7 +51,7 @@ ze_add_source(ZESocket.h					Sources Headers)
 ze_add_library(ZESocket 
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
-	LIBS ws2_32 ZEFoundation
+	LIBS ws2_32
 	INSTALL
 	INSTALL_DESTINATION ZEFoundation/ZESocket
 	INSTALL_COMPONENT ZESDK)
