FIX: ZETextureFileJPEG can now read gray scale images with any relative sampling factors. FIX: Critical error outputs are changed to normal error outputs in ZETextureFileJPEG. ADD: ZETextureFileJPEG test added. CHG: ZEGrid, ZEGizmo and ZEPlayer are added to ZEGraphicsDebugModule.
svn path=/trunk/; revision=922

--- a/Source/ZEEngine/ZETexture/CMakeLists.txt
+++ b/Source/ZEEngine/ZETexture/CMakeLists.txt
@@ -76,6 +76,7 @@ ze_add_source(ZETextureFileJPEGMarkerReader.cpp			Sources)
 ze_add_source(ZETextureFileJPEGMarkerReader.h			Sources)
 ze_add_source(ZETextureFileJPEGMCUController.cpp		Sources)
 ze_add_source(ZETextureFileJPEGMCUController.h			Sources)
+ze_add_source(ZETextureFileJPEGTest.cpp					Tests)
 ze_add_source(ZETextureFileTGA.cpp						Sources)
 ze_add_source(ZETextureFileTGA.h						Sources Headers)
 #ze_add_source(ZETextureFileTGATest.cpp					Tests)
