IMP: DotProduct, Divide, DistanceSquare, Normalize, Max, Min, Clamp, Saturate functions in ZEVector classes ported to SSE4 instructions. IMP: Add, Sub, Divide, Multiply, Scale, Transform, Transpose, Determinant functions in ZEMatrix classes ported to SSE4 instructions. CHG: Changed functions on the ZEVector class now in ZEVectorSSE4.cpp file, unchanged versions on these function now in ZEVectorGeneric.cpp CHG: Changed functions on the ZEMatrix class now in ZEMatrixSSE4.cpp file, unchanged versions on these function now in ZEMatrixGeneric.cpp ADD: ZEMatrixGeneric.cpp added. ADD: ZEMatrixSSE4.cpp added. ADD: ZEVectorGeneric.cpp added. ADD: ZEVectorSSE4.cpp added.
svn path=/trunk/; revision=939

--- a/Source/ZEFoundation/ZEMath/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEMath/CMakeLists.txt
@@ -53,6 +53,8 @@ ze_add_source(ZELineSegmentTests.cpp	Tests)
 ze_add_source(ZEMath.h					Sources Headers)
 ze_add_Source(ZEMath.cpp				Sources)
 ze_add_source(ZEMatrix.cpp				Sources)
+ze_add_source(ZEMatrixGeneric.cpp		Sources)
+ze_add_source(ZEMatrixSSE4.cpp			Sources)
 ze_add_source(ZEMatrix3x3Tests.cpp		  Tests)
 ze_add_source(ZEMatrix4x4Tests.cpp			Tests)
 ze_add_source(ZEMatrix.h				Sources Headers)
@@ -78,6 +80,8 @@ ze_add_source(ZETriangle.cpp			Sources)
 ze_add_source(ZETriangle.h				Sources Headers)
 ze_add_source(ZETriangleTests.cpp		Tests)
 ze_add_source(ZEVector.cpp				Sources)
+ze_add_source(ZEVectorGeneric.cpp				Sources)
+ze_add_source(ZEVectorSSE4.cpp				Sources)
 ze_add_source(ZEVector.h				Sources Headers)
 ze_add_source(ZEVector2Tests.cpp		Tests)
 ze_add_source(ZEVector3Tests.cpp		Tests)
