--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -55,10 +55,14 @@ add_subdirectory(ZETest)
 add_subdirectory(ZEThread)
 add_subdirectory(ZESocket)
 
+ze_add_source(ZECommon.h 			Sources Headers)
+ze_add_source(ZECommon.cpp 			Sources)
 ze_add_source(ZETypes.h 			Sources Headers)
 ze_add_source(ZETypes.cpp 			Sources)
 ze_add_source(ZEEndian.h 			Sources Headers)
 ze_add_source(ZEEndian.cpp 			Sources)
+ze_add_source(ZESwap.h 				Sources Headers)
+ze_add_source(ZESwap.cpp 			Sources)
 ze_add_source(ZEError.h 			Sources Headers)
 ze_add_source(ZEError.cpp 			Sources)
 ze_add_source(ZELog.h				Sources Headers)
