--- a/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
@@ -66,6 +66,8 @@ ze_add_source(ZED3D9FogProcessor.cpp			Sources)
 ze_add_source(ZED3D9FogProcessor.h				Sources)
 ze_add_source(ZED3D9FrameRenderer.cpp			Sources)
 ze_add_source(ZED3D9FrameRenderer.h				Sources)
+ze_add_source(ZED3D9GrainProcessor.cpp			Sources)
+ze_add_source(ZED3D9GrainProcessor.h			Sources)
 ze_add_source(ZED3D9HDRProcessor.cpp			Sources)
 ze_add_source(ZED3D9HDRProcessor.h				Sources ZEPP)
 ze_add_source(ZED3D9IndexBuffer.cpp				Sources)
