--- a/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
@@ -108,6 +108,8 @@ ze_add_source(ZED3D9Texture3D.cpp						Sources)
 ze_add_source(ZED3D9Texture3D.h							Sources)
 ze_add_source(ZED3D9TextureCube.cpp						Sources)
 ze_add_source(ZED3D9TextureCube.h						Sources)
+ze_add_source(ZED3D9TextureMaskProcessor.cpp			Sources)
+ze_add_source(ZED3D9TextureMaskProcessor.h				Sources)
 ze_add_source(ZED3D9TextureResizeFilters.cpp			Sources)
 ze_add_source(ZED3D9TextureResizeFilters.h				Sources)
 ze_add_source(ZED3D9TextureResizer.cpp					Sources)
