FIX: GCC SSE3 and SS4 porting/syntax errors has been fixed. FIX: GCC ZEString _strtoui64 porting error has been fixed.
svn path=/trunk/; revision=950

--- a/Source/ZEFoundation/ZEMath/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEMath/CMakeLists.txt
@@ -53,11 +53,8 @@ ze_add_source(ZELineSegmentTests.cpp	Tests)
 ze_add_source(ZEMath.h					Sources Headers)
 ze_add_Source(ZEMath.cpp				Sources)
 ze_add_source(ZEMatrix.cpp				Sources)
-#ze_add_source(ZEMatrixGeneric.cpp		Sources)
-#ze_add_source(ZEMatrixSSE3.cpp			Sources)
-ze_add_source(ZEMatrixSSE4.cpp			Sources)
-ze_add_source(ZEMatrix3x3Tests.cpp		  Tests)
-ze_add_source(ZEMatrix4x4Tests.cpp			Tests)
+ze_add_source(ZEMatrix3x3Tests.cpp		Tests)
+ze_add_source(ZEMatrix4x4Tests.cpp		Tests)
 ze_add_source(ZEMatrix.h				Sources Headers)
 ze_add_source(ZEOBBox.cpp				Sources)
 ze_add_source(ZEOBBox.h					Sources Headers)
@@ -67,7 +64,7 @@ ze_add_source(ZEPlane.h					Sources Headers)
 ze_add_source(ZEPlaneTests.cpp			Tests)
 ze_add_source(ZEQuaternion.cpp			Sources)
 ze_add_source(ZEQuaternion.h			Sources Headers)
-ze_add_source(ZEQuaternionTests.cpp	Tests)
+ze_add_source(ZEQuaternionTests.cpp		Tests)
 ze_add_source(ZERay.cpp					Sources)
 ze_add_source(ZERay.h					Sources Headers)
 ze_add_source(ZERayTests.cpp			Tests)
@@ -81,9 +78,6 @@ ze_add_source(ZETriangle.cpp			Sources)
 ze_add_source(ZETriangle.h				Sources Headers)
 ze_add_source(ZETriangleTests.cpp		Tests)
 ze_add_source(ZEVector.cpp				Sources)
-#ze_add_source(ZEVectorGeneric.cpp				Sources)
-#ze_add_source(ZEVectorSSE3.cpp				Sources)
-ze_add_source(ZEVectorSSE4.cpp				Sources)
 ze_add_source(ZEVector.h				Sources Headers)
 ze_add_source(ZEVector2Tests.cpp		Tests)
 ze_add_source(ZEVector3Tests.cpp		Tests)
@@ -96,11 +90,22 @@ ze_add_source(ZEViewFrustum.h			Sources Headers)
 ze_add_source(ZEViewFrustum.cpp			Sources)
 ze_add_source(ZEViewSphere.h			Sources Headers)
 ze_add_source(ZEViewSphere.cpp			Sources)
-ze_add_source(ZEViewHemiSphere.h			Sources Headers)
-ze_add_source(ZEViewHemiSphere.cpp			Sources)
+ze_add_source(ZEViewHemiSphere.h		Sources Headers)
+ze_add_source(ZEViewHemiSphere.cpp		Sources)
 ze_add_source(ZEViewCuboid.h			Sources Headers)
 ze_add_source(ZEViewCuboid.cpp			Sources)
-	
+
+if (ZEBUILD_PLATFORM_ARCHITECTURE_SSE4)
+	ze_add_source(ZEMatrixSSE4.cpp			Sources)
+	ze_add_source(ZEVectorSSE4.cpp			Sources)
+elseif (ZEBUILD_PLATFORM_ARCHITECTURE_SSE3)
+	ze_add_source(ZEMatrixSSE3.cpp			Sources)
+	ze_add_source(ZEVectorSSE3.cpp			Sources)
+else()
+	ze_add_source(ZEMatrixGeneric.cpp		Sources)
+	ze_add_source(ZEVectorGeneric.cpp		Sources)
+endif()
+
 ze_add_library(ZEMath 
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
