ADD: ZED3D9UnsharpenFilterProcessor implemented. IMP: NightVision, Inverse and Normal color matrices are added to ZED3D9ColorTransformProcessor.
svn path=/trunk/; revision=961

--- a/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
@@ -119,6 +119,8 @@ ze_add_source(ZED3D9TextureResizer.cpp					Sources)
 ze_add_source(ZED3D9TextureResizer.h					Sources)
 ze_add_source(ZED3D9UIMaterial.cpp						Sources)
 ze_add_source(ZED3D9UIMaterial.h						Sources)
+ze_add_source(ZED3D9UnsharpenFilterProcessor.cpp		Sources)
+ze_add_source(ZED3D9UnsharpenFilterProcessor.h			Sources)
 ze_add_source(ZED3D9VertexBuffer.cpp					Sources)
 ze_add_source(ZED3D9VertexBuffer.h						Sources)
 ze_add_source(ZED3D9VertexDeclaration.cpp				Sources)
