ADD: ZEThread has been ported to Unix (pthread). ADD: ZESerialPort has been ported to Unix. FIX: Unix porting problem; non necessary windows headers has removed from ZEFile and ZEPartialFile.
svn path=/trunk/; revision=963

--- a/Source/ZEFoundation/ZEThread/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEThread/CMakeLists.txt
@@ -35,18 +35,22 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-ze_add_source(ZEJob.cpp          Sources)
-ze_add_source(ZEJob.h            Sources Headers)
-ze_add_source(ZEJobManager.cpp   Sources)
-ze_add_source(ZEJobManager.h     Sources Headers)
-ze_add_source(ZELock.cpp         Sources)
-ze_add_source(ZELock.h           Sources Headers)
-ze_add_source(ZESystemLock.cpp   Sources)
-ze_add_source(ZESystemLock.h     Sources Headers)
-ze_add_source(ZETask.cpp         Sources)
-ze_add_source(ZETask.h           Sources Headers)
-ze_add_source(ZEThread.cpp       Sources)
-ze_add_source(ZEThread.h         Sources Headers)
+ze_add_source(ZEJob.cpp          		Sources)
+ze_add_source(ZEJob.h            		Sources Headers)
+ze_add_source(ZEJobManager.cpp   		Sources)
+ze_add_source(ZEJobManager.h     		Sources Headers)
+ze_add_source(ZELock.cpp         		Sources)
+ze_add_source(ZELock.h          	 	Sources Headers)
+ze_add_source(ZESystemLock.cpp   		Sources)
+ze_add_source(ZESystemLock_Unix.cpp   	Sources PLATFORMS Unix)
+ze_add_source(ZESystemLock_Windows.cpp  Sources PLATFORMS Windows)
+ze_add_source(ZESystemLock.h    	 	Sources Headers)
+ze_add_source(ZETask.cpp         		Sources)
+ze_add_source(ZETask.h           		Sources Headers)
+ze_add_source(ZEThread.cpp       		Sources)
+ze_add_source(ZEThread_Unix.cpp 		Sources PLATFORMS Unix)
+ze_add_source(ZEThread_Windows.cpp		Sources PLATFORMS Windows)
+ze_add_source(ZEThread.h				Sources Headers)
 
 ze_add_library(ZEThread
 	SOURCES ${Sources} 
