IMP: More build system initialization routines has been moved to ze.cmake file. FIX: FixedMaterial.hlsl naming typo errors has been fixed. FIX: WINDOWS_LEAN_AND_MEAN (which must be WIN32_LEAN_AND_MEAN) define has been fixed. FIX: ZESerialPort::Open function syntax errors fixed.
svn path=/trunk/; revision=965

--- a/CMake/CMakeLists.txt
+++ b/CMake/CMakeLists.txt
@@ -42,5 +42,6 @@ ze_add_cmake_project(CMakeScripts
 		parse_arguments.cmake
 		pclint.cmake
 		test_cocoon.cmake
+		ze.cmake
 		ze_functions.cmake
 		ze_qt.cmake)
