--- a/Source/ZE3dsMax/CMakeLists.txt
+++ b/Source/ZE3dsMax/CMakeLists.txt
@@ -41,8 +41,13 @@ ze_set_project_folder("ZE3dsMax")
 
 set(ZEBUILD_3DS_MAX_BINARY_DIRECTORY "C:\\Program Files (x86)\\Autodesk\\3ds Max 2010" CACHE STRING "Directory of 3ds max.")
 
-include_directories(${PROJECT_SOURCE_DIR})
-
+include_directories(
+	${PROJECT_SOURCE_DIR}
+	${ZEBUILD_INCLUDE_PATH}/3dsMax/2010)
+	
+link_directories(
+	${ZEBUILD_LIB_PATH}/3dsMax/2010)
+	
 add_subdirectory(ZE3dsProgressDialog)
 add_subdirectory(ZE3dsModelExporter)
 add_subdirectory(ZE3dsMapExporter)
