CHG: ZEPathManager is created by the functions seperated from ZEFileCommon class.
svn path=/trunk/; revision=968

--- a/Source/ZEFoundation/ZEFile/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEFile/CMakeLists.txt
@@ -50,6 +50,10 @@ ze_add_source(ZEFolderInfo.h			Sources Headers)
 ze_add_source(ZEFileTests.cpp			Tests)
 ze_add_source(ZEPartialFile.cpp			Sources)
 ze_add_source(ZEPartialFile.h			Sources Headers)
+
+ze_add_source(ZEPathManager_Windows.cpp	Sources)
+ze_add_source(ZEPathManager.h			Sources)
+
 ze_add_source(ZEPartialFileTests.cpp	Tests)
 ze_add_source(ZEFileCache.cpp			Sources)
 ze_add_source(ZEFileCache.h				Sources Headers)
